# pangeo-fish

./: .GITIGNORE.txt  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  COPYRIGHT  README.md  codemeta.json  conda-requirements.txt  environment.yml  install_notes.md  marc_diff.ipynb  marc_emission.ipynb  marc_merge_diff.ipynb  paper.md  pyproject.toml  repix_healpix_comp.ipynb  repix_healpix_prepare.ipynb  template.yaml  test.yaml
.binder/: Dockerfile  environment.yml  requirements.txt
.github/workflows/: ci.yml  draft-pdf.yml  pypi.yaml  pypi.yml
ci/requirements/: .environment.yaml.swp  dev-environment.yaml  env.yaml  environment.yaml
configuration/A19124/: 01_copernicus_diff.yaml
docs/: api-hidden.rst  api.rst  conf.py  environment.yaml  format.md  index.rst  installation.md  notebook.nblink  notebook2.nblink  notebooks.rst  requirements.txt  tuto.nblink
docs/_build/doctrees/: environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: installation.md.txt
docs/_build/html/autoapi/: index.html
notebooks/: 08_track_decoding.ipynb  Examine_result_sigma_pdf.ipynb  README.md  coastal_distance_study.ipynb  config  full_workflow.ipynb  pangeo-fish-bathy.ipynb  pangeo-fish-convol-healpix.ipynb  pangeo-fish-multi-sigma.ipynb  pangeo-fish-old_convol.ipynb  pangeo-fish-unification.ipynb  pangeo-fish.ipynb  pangeo-fish_short.ipynb  pangeo_fish_bar.ipynb  pannel_plot.ipynb  timestamp_detect.ipynb
notebooks/A19124/: mean.parquet  mode.parquet  parameters.json  tags.html  trajectories.html
notebooks/A19124/combined.zarr/: .zmetadata
notebooks/A19124/combined.zarr/cell_ids/: 0.0
notebooks/A19124/combined.zarr/latitude/: 0.0
notebooks/A19124/combined.zarr/pdf/: .zarray
notebooks/A19124/combined.zarr/resolution/: .zattrs  0
notebooks/A19124/combined.zarr/time/: .zarray
notebooks/A19124/diff-regridded-test.zarr/: .zmetadata
notebooks/A19124/diff-regridded-test.zarr/H0/: 0
notebooks/A19124/diff-regridded-test.zarr/cell_ids/: .zarray  .zattrs  0  1  2  3
notebooks/A19124/diff-regridded-test.zarr/latitude/: 0  1  2  3
notebooks/A19124/diff-regridded-test.zarr/longitude/: .zarray  0  1  2  3
notebooks/A19124/diff-regridded-test.zarr/ocean_mask/: .zattrs
notebooks/A19124/diff-regridded.zarr/: .zmetadata
notebooks/A19124/diff-regridded.zarr/H0/: 0.0
notebooks/A19124/diff-regridded.zarr/cell_ids/: .zattrs
notebooks/A19124/diff-regridded.zarr/ocean_mask/: .zarray
notebooks/A19124/diff.zarr/: .zattrs  .zmetadata
notebooks/A19124/diff.zarr/H0/: .zarray  0.0
notebooks/A19124/diff.zarr/diff/: .zarray  .zattrs
notebooks/A19124/diff.zarr/lat/: .zarray  0
notebooks/A19124/diff.zarr/latitude/: .zarray  0.0
notebooks/A19124/diff.zarr/lon/: .zarray  0
notebooks/A19124/diff.zarr/longitude/: 0.0
notebooks/A19124/diff.zarr/ocean_mask/: .zarray  .zattrs  0.0
notebooks/A19124/diff.zarr/time/: 0
notebooks/A19124/emission.zarr/: .zattrs  .zmetadata
notebooks/A19124/emission.zarr/cell_ids/: .zattrs
notebooks/A19124/emission.zarr/final/: .zarray  0
notebooks/A19124/emission.zarr/initial/: 0
notebooks/A19124/emission.zarr/latitude/: 0
notebooks/A19124/emission.zarr/longitude/: 0
notebooks/A19124/emission_acoustic.zarr/: .zmetadata
notebooks/A19124/states.zarr/: .zmetadata
notebooks/A19124/states_cells.zarr/: .zmetadata
notebooks/COMP/: cartesian_convol_noaccoustic.ipynb  cartesian_convol_sigma.ipynb  compare_deactivate_emission_1D.ipynb  compare_deactivate_emission_2D.ipynb  healpix_convol.ipynb  healpix_convol_2D.ipynb  healpix_convol_noaccoustic.ipynb  healpix_func.ipynb
notebooks/Tide/: multiplication_pdf_tide.ipynb  multisigma_tide.ipynb  tide_clean.ipynb  tide_function.py
notebooks/Tide_Hue/: tide_function_Copy1.py
notebooks/Wave/: Wave_function.py  spectrum_study_Wave_Eels.ipynb  try_create_pdf_Wave_and_eels.ipynb
notebooks/experimentation/: 08_track_decoding.ipynb
notebooks/formatting/: data_conversion.py  data_formating.ipynb
notebooks/new_workflow/: README.md  pangeo_fish_with_light.ipynb  prepare_tag_model.ipynb  raw_to_dst.ipynb  variance_fast.ipynb
notebooks/papermill/: pangeo-fish_DK.ipynb  pangeo-fish_coastal_distance.ipynb  pangeo-fish_papermill.ipynb  papermill_launcher.ipynb  resource_reporter.py
notebooks/tide/: multiplication_pdf_tide.ipynb
notebooks/workflow/: 01_copernicus_diff.ipynb  01_marc_diff.ipynb  01b_copernicus_diff.ipynb  02_healpix_regrid.ipynb  02_healpix_regrid_copernicustest.ipynb  03_emission.ipynb  03_emission_copernicustest.ipynb  04_acoustic_ranges.ipynb  04_acoustic_ranges_copernicustest.ipynb  05a_estimator_scipy.ipynb  05a_estimator_scipy_nodask.ipynb  05a_estimator_scipycopernicustest.ipynb  05b_estimator_optuna.ipynb  06_state_probabilities.ipynb  06_verify_emission_state.ipynb  07_track_decoding.ipynb  07_verify_emission_state.ipynb  08_track_decoding.ipynb  08_verify_emission_state.ipynb
pangeo_fish/: acoustic.py  bathy.py  cf.py  cluster.py  dataset_utils.py  diff.py  distributions.py  functoolz.py  grid.py  healpy.py  helpers.py  io.py  main.py  pdf.py  tags.py  tide.py  tracks.py  utils.py  visualization.py
pangeo_fish/cli/: cluster.py  main.py  prepare.py
pangeo_fish/distributions/: healpix.py  planar2d.py
pangeo_fish/hmm/: __init__.py  decode.py  filter.py  optimize.py  prediction.py
pangeo_fish/hmm/estimator/: __init__.py  cached.py  eager.py  naive.py  split.py
pangeo_fish/hmm/optimize/: __init__.py  optuna.py  scipy.py
pangeo_fish/light/: __init__.py  ingest.py  lunar.py  physics.py  quality.py  solar.py
pangeo_fish/tests/: test_acoustic.py  test_decode.py  test_diff.py  test_distributions.py  test_estimator.py  test_grid.py  test_hmm_optimize.py  test_io.py  test_light.py  test_pdf.py  test_tags.py  test_tracks.py  test_utils.py
publication/: paper.bib  paper.md
(+107 files in other folders)
